# Porta

./: .env.example  .gitignore  README.md  alembic.ini  app.py  design.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.stitch/designs/: cost-guard.html  gateway-pulse-dark.html  gateway-pulse-light.html  model-playground.html  threejs-reference.html
alembic/: env.py
alembic/versions/: 20260611_0001_initial_phase_zero_schema.py  20260611_0002_add_pricing_snapshots_for_r1.py  20260612_0003_cached_pricing_and_usage_integrity.py
docs/: app-ui-guide.md  architecture.md  privacy.md
docs/adr/: 0001-package-boundaries.md  0002-async-provider-protocol.md  0003-persistence-model.md  0004-privacy-by-default.md  0005-cross-record-integrity.md  0006-atomic-generation-ledger.md  README.md
docs/evaluation/: phase4-local-benchmark.md
docs/gates/: README.md  phase-0.md  phase-1.md  phase-2.md  phase-3-readiness-report.md  phase-3.md  phase-4.md
docs/observability/: grafana-dashboard.json  prometheus-alerts.yml  runbook.md  step-2-generate-pipeline-metrics.md  step-3-usage-analytics.md  step-4-dashboard-alerts-runbook.md
reports/: phase4-benchmark.json
scripts/: run_phase4_benchmark.py
src/: main.tsx  vite-env.d.ts
src/api/: gateway.ts
src/components/dashboard/: CostGuardPanel.tsx  GatewayPulsePanel.tsx  ModelPlaygroundPanel.tsx  dashboardPanels.css  dashboardTokens.ts  index.ts  types.ts
src/data/: dashboardMockData.ts
src/llm_gateway/: main.py
src/llm_gateway/api/: router.py
src/llm_gateway/core/: __init__.py  auth.py  cache.py  config.py  context.py  errors.py  guardrails.py  logging.py  metrics.py  middleware.py  ollama.py  quota.py  redis.py  task_routing.py
src/llm_gateway/domain/: __init__.py  analytics.py  base.py  chat.py  errors.py  generate.py  phase2.py
src/llm_gateway/evaluation/: __init__.py  (+4 more)
src/styles/: dashboardApp.css
tests/: conftest.py  test_analytics.py  test_app.py  test_cache.py  test_config.py  test_contracts.py  test_correlation.py  test_errors.py  test_evaluation_benchmark.py  test_evaluation_dataset.py  test_evaluation_scoring.py  test_generate_api.py  test_guardrails.py  test_health.py  test_live_smoke.py  test_local_smoke.py  test_logging.py  test_metrics.py  test_middleware.py  test_migrations.py  test_observability_docs.py  test_persistence.py  test_privacy.py  test_providers.py  test_quota.py  test_real_redis.py  test_task_routing.py
(+20 files in other folders)
