[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-gateway"
version = "0.1.0"
description = "A privacy-conscious, OpenAI-compatible LLM gateway foundation."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14,<2",
    "aiosqlite>=0.20,<1",
    "asyncpg>=0.30,<1",
    "cryptography>=45,<46",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "pydantic-settings>=2.7,<3",
    "psycopg[binary]>=3.2,<4",
    "redis>=5.2,<6",
    "python-dotenv>=1.0,<2",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
    "prometheus-client>=0.21,<1",
]

[project.scripts]
llm-gateway = "llm_gateway.main:run"

[dependency-groups]
dev = [
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_gateway"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["llm_gateway"]
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true
